[package]
name = "nnf"
version = "0.1.0"
edition = "2021"
description = "Negation Normal Form manipulation library"
homepage = "https://github.com/night-crawler/nnf"
repository = "https://github.com/night-crawler/nnf"
license = "MIT"
readme = "README.md"

[features]
default = ["graphviz"]
graphviz = ["dot-writer"]

[dependencies]
dot-writer = { version = "0.1", optional = true }